--- a/app/scss/components/card.scss
+++ b/app/scss/components/card.scss
@@ -114,6 +114,10 @@
 
     &__numchange {
         margin-left: rem(4);
+
+        &--small {
+            font-size: rem(12);
+        }
     }
 
 }
