--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -54,7 +54,7 @@
         width: rem(18);
         height: rem(18);
         border-radius: 50%;
-        background-color: var(--toggle);
+        background-color: var(--toggle-bg-light);
         transition: all 150ms ease-in-out;
     }
 
