--- a/app/scss/globals/colours.scss
+++ b/app/scss/globals/colours.scss
@@ -7,9 +7,11 @@
     --instagram-middle: hsl(5, 77%, 71%);
     --instagram-end: hsl(329, 70%, 58%);
     --youtube: hsl(348, 97%, 39%);
+    --toggle-bg-light: hsl(230, 22%, 74%);
     --toggle-bg-start: hsl(210, 78%, 56%);
     --toggle-bg-end: hsl(146, 68%, 55%);
-    --toggle: hsl(230, 22%, 74%);
+    --toggle-light: hsl(230, 19%, 60%);
+    --toggle-button-light: hsl(228, 46%, 96%);
     --dark-bg: hsl(230, 17%, 14%);
     --dark-top-bg: hsl(232, 19%, 15%);
     --dark-card-bg: hsl(228, 28%, 20%);
