--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -38,11 +38,7 @@
         width: 100%;
         top: 0;
         border-radius: rem(12);
-        background: linear-gradient(
-            225deg,
-            var(--toggle-bg-end) 0%,
-            var(--toggle-bg-start) 98.02%
-        );
+        background: var(--toggle-bg);
         pointer-events: none;
     }
 
@@ -54,7 +50,7 @@
         width: rem(18);
         height: rem(18);
         border-radius: 50%;
-        background-color: var(--toggle-bg-light);
+        background-color: var(--toggle-button);
         transition: all 150ms ease-in-out;
     }
 
